# object-model

./: pyproject.toml
examples/: example1.py
object_model/: __init__.py  event.py  observable_deque.py  observable_dict.py  observable_list.py  observable_set.py
object_model/abc/: __init__.py
tests/: test_ocollections.py
